@@ -57,94 +57,65 @@
 //	begin namespace
 namespace Loris {
 
-static long countem = 0;
-
 // ---------------------------------------------------------------------------
 //	Synthesizer constructor
 // ---------------------------------------------------------------------------
-//	The default fadeTime is 1 ms. (.001)
-//
-Synthesizer::Synthesizer( double samplerate, std::vector<double> & buffer, double fade  ) :
-	sampleBuffer( buffer ),
+//!	Construct a Synthesizer using the specified sampling rate, sample
+//!	buffer (a standard library vector), and Partial
+//!	fade time (in seconds). Since Partials generated by the Loris Analyzer
+//!	generally begin and end at non-zero amplitude, zero-amplitude
+//!	Breakpoints are inserted at either end of the Partial, at a temporal
+//!	distance equal to the fade time, to reduce turn-on and turn-off
+//!	artifacts. If the fade time is unspecified, the default value of one
+//!	millisecond (0.001 seconds) is used.
+//!
+//!	\param	samplerate The rate (Hz) at which to synthesize samples
+//!			(must be positive).
+//!	\param	buffer The vector (of doubles) into which rendered samples
+//!			should be accumulated.
+//!	\param	fade The Partial fade time in seconds (must be non-negative).
+//!	\throw	InvalidArgument if the specfied sample rate is non-positive.
+//!	\throw	InvalidArgument if the specified fade time is negative.
+Synthesizer::Synthesizer( double samplerate, std::vector<double> & buffer, 
+						  double fade ) :
+	sampleBuffer( & buffer ),
 	tfade( fade ),
 	srate( samplerate )
 {
 	//	check to make sure that the sample rate is valid:
 	if ( srate <= 0. ) 
 	{
-		Throw( InvalidObject, "Synthesizer sample rate must be positive." );
+		Throw( InvalidArgument, "Synthesizer sample rate must be positive." );
 	}
 
 	//	check to make sure that the specified fade time
 	//	is valid:
 	if ( tfade < 0. )
 	{
-		Throw( InvalidObject, "Synthesizer Partial fade time must be non-negative." );
+		Throw( InvalidArgument, 
+			   "Synthesizer Partial fade time must be non-negative." );
 	}
-
-	//countem = 0;
 }
 
-// ---------------------------------------------------------------------------
-//	Synthesizer copy constructor
-// ---------------------------------------------------------------------------
-//	Synthesizer copies share a sample buffer.
-//		
-//	Hey, copy/assign/destroy are free, aren't they?
-//	Not doing anything interesting.
-//	
-//	Hey! Actually, assignment cannot possibly work, 
-//	Synthesizer holds a reference to the sample vector!
-//
-Synthesizer::Synthesizer( const Synthesizer & rhs ) :
-	osc( rhs.osc ),
-	sampleBuffer( rhs.sampleBuffer ),
-	tfade( rhs.tfade ),
-	srate( rhs.srate )
-{
-	//countem = 0;
-}
-
-// ---------------------------------------------------------------------------
-//  destructor
-// ---------------------------------------------------------------------------
-//
-Synthesizer::~Synthesizer(void)
-{
-	//debugger << "synthesized " << countem << " partials, bye." << endl;
-	//countem = 0;
-}
-
-// ---------------------------------------------------------------------------
-//	Synthesizer assignment
-// ---------------------------------------------------------------------------
-//	Synthesizer copies share a sample buffer.
-//
-/*
-Synthesizer & 
-Synthesizer::operator=( const Synthesizer & rhs )
-{
-	if ( this != &rhs )
-	{
-		osc = rhs.osc;
-		sampleBuffer = rhs.sampleBuffer;
-		tfade = rhs.tfade;
-		srate = rhs.srate;
-	}
-
-	return *this;
-}
-*/
 // ---------------------------------------------------------------------------
 //	synthesize
 // ---------------------------------------------------------------------------
-//	Synthesize a bandwidth-enhanced sinusoidal Partial. Zero-amplitude
-//	Breakpoints are inserted at either end of the Partial to reduce
-//	turn-on and turn-off artifacts, as described above. The client is
-//	responsible or insuring that this Synthesizer's buffer is long enough
-//	to hold all samples from the time-shifted and padded Partials.
-//	Synthesizer will not generate samples outside the buffer, but neither
-//	will any attempt be made to eliminate clicks at the buffer boundaries.
+//!	Synthesize a bandwidth-enhanced sinusoidal Partial. Zero-amplitude
+//!	Breakpoints are inserted at either end of the Partial to reduce
+//!	turn-on and turn-off artifacts, as described above. The synthesizer
+//!	will resize the buffer as necessary to accommodate all the samples,
+//!	including the fade out. Previous contents of the buffer are not
+//!	overwritten. Partials with start times earlier than the Partial fade
+//!	time will have shorter onset fades. Partials are not rendered at
+//! frequencies above the half-sample rate. 
+//!
+//! \param 	p The Partial to synthesize.
+//! \return Nothing.
+//!	\pre	The partial must have non-negative start time.
+//! \post	This Synthesizer's sample buffer (vector) has been 
+//!			resized to accommodate the entire duration of the 
+//!			Partial, p, including fade out at the end.
+//!	\throw	InvalidPartial if the Partial has negative start time.
 //	
 void
 Synthesizer::synthesize( const Partial & p ) 
@@ -160,63 +131,86 @@ Synthesizer::synthesize( const Partial & p )
 		Throw( InvalidPartial, "Tried to synthesize a Partial having start time less than 0." );
 	}
 
-	debugger << "synthesizing Partial from " << p.startTime() * srate <<
-			" to " << p.endTime() * srate << " starting phase " <<
-			p.initialPhase() << " starting frequency " << 
-			p.first().frequency() << endl;
+	debugger << "synthesizing Partial from " << p.startTime() * srate 
+			 << " to " << p.endTime() * srate << " starting phase "
+			 << p.initialPhase() << " starting frequency " 
+			 << p.first().frequency() << endl;
 
 	//	resize the sample buffer if necessary:
 	typedef unsigned long index_type;
-	index_type endSamp = index_type( (p.endTime() + tfade) * srate );
-	if ( endSamp+1 > sampleBuffer.size() )
+	index_type endSamp = index_type( ( p.endTime() + tfade ) * srate );
+	if ( endSamp+1 > sampleBuffer->size() )
 	{
 		//	pad by one sample:
-		sampleBuffer.resize( endSamp+1 );
+		sampleBuffer->resize( endSamp+1 );
 	}
 	
 	//	compute the starting time for synthesis of this Partial,
 	//	tfade before the Partial's startTime, but not before 0:
-	double itime = (tfade < p.startTime() ) ? (p.startTime() - tfade) : 0.;
-	index_type currentSamp = index_type(itime * srate);
+	double itime = ( tfade < p.startTime() ) ? ( p.startTime() - tfade ) : 0.;
+	index_type currentSamp = index_type( itime * srate );
 	
 	//	reset the oscillator:
 	osc.resetEnvelopes( BreakpointUtils::makeNullBefore( p.first(), p.startTime() - itime ), srate );
 
-	//	synthesize linear-frequency segments until there aren't any more
-	//	segments or the segments threaten to run off the end of the buffer:
-	const Partial::label_type pnum = p.label();
+	//	cache the previous frequency (in Hz) so that it
+	//	can be used to reset the phase when necessary
+	//	in the sample computation loop below (this saves
+	//	having to recompute from the oscillator's radian
+	//	frequency):
+	double prevFrequency = p.first().frequency();	
+	
+	//	better to compute this only once:
+	const double OneOverSrate = 1. / srate;
+	
+	//	synthesize linear-frequency segments until 
+	// 	there aren't any more Breakpoints to make segments:
+	double * bufferBegin = &( sampleBuffer->front() );
 	for ( Partial::const_iterator it = p.begin(); it != p.end(); ++it )
 	{
 		index_type tgtSamp = index_type( it.time() * srate );
 		Assert( tgtSamp >= currentSamp );
 		
-		osc.oscillate( &(sampleBuffer[currentSamp]), &(sampleBuffer[tgtSamp]),
-					   it.breakpoint(), srate );
-									  
 		//	if the current oscillator amplitude is
-		//	zero, reset the phase (note: the iterator
-		//	values are the target values, so the phase
-		//	should be set _after_ generating samples,
-		//	when the oscillator and iterator are in-sync):
-		if ( it.breakpoint().amplitude() == 0. )
-			osc.resetPhase( it.breakpoint().phase() );
-			
+		//	zero, and the target Breakpoint amplitude
+		//	is not, reset the oscillator phase so that
+		//	it matches exactly the target Breakpoint 
+		//	phase at tgtSamp:
+		if ( osc.amplitude() == 0. )
+		{
+			//	recompute the phase so that it is correct
+			//	at the target Breakpoint (need to do this
+			//	because the null Breakpoint phase was computed
+			//	from an interval in seconds, not samples, so
+			//	it might be inaccurate):
+			//
+			//	double favg = 0.5 * ( prevFrequency + it.breakpoint().frequency() );
+			//	double dphase = 2 * Pi * favg * ( tgtSamp - currentSamp ) / srate;
+			//
+			double dphase = Pi * ( prevFrequency + it.breakpoint().frequency() ) 
+							   * ( tgtSamp - currentSamp ) * OneOverSrate;
+			osc.resetPhase( it.breakpoint().phase() - dphase );
+		}
+
+		osc.oscillate( bufferBegin + currentSamp, bufferBegin + tgtSamp,
+					   it.breakpoint(), srate );
+		
 		currentSamp = tgtSamp;
+		prevFrequency = it.breakpoint().frequency();
 	}
 
-	// debugger << "out of loop at target samp " << currentsamp << endl;
-	
-	double endTime = endSamp / srate;
-	osc.oscillate( &(sampleBuffer[currentSamp]), &(sampleBuffer[endSamp]),
+	//	render a fade out segment:	
+	osc.oscillate( bufferBegin + currentSamp, bufferBegin + endSamp,
 				   BreakpointUtils::makeNullAfter( p.last(), tfade ), srate );
 	
-	// ++countem;
 }
 	
 #pragma mark -- access --
+
 // ---------------------------------------------------------------------------
 //	fadeTime
 // ---------------------------------------------------------------------------
+//!	Return this Synthesizer's Partial fade time, in seconds.
 double 
 Synthesizer::fadeTime( void ) const 
 {
@@ -226,6 +220,7 @@ Synthesizer::fadeTime( void ) const
 // ---------------------------------------------------------------------------
 //	sampleRate
 // ---------------------------------------------------------------------------
+//!	Return the sampling rate (in Hz) for this Synthesizer.
 double 
 Synthesizer::sampleRate( void ) const 
 {
@@ -235,19 +230,23 @@ Synthesizer::sampleRate( void ) const
 // ---------------------------------------------------------------------------
 //	samples (const)
 // ---------------------------------------------------------------------------
+//!	Return a const reference to the sample buffer used (not
+//!	owned) by this Synthesizer.
 const std::vector<double>
 Synthesizer::samples( void ) const 
 {
-	return sampleBuffer;
+	return *sampleBuffer;
 }
 
 // ---------------------------------------------------------------------------
 //	samples (non-const)
 // ---------------------------------------------------------------------------
+//!	Return a reference to the sample buffer used (not
+//!	owned) by this Synthesizer.
 std::vector<double>
 Synthesizer::samples( void )  
 {
-	return sampleBuffer;
+	return *sampleBuffer;
 }
 
 #pragma mark -- mutation --
@@ -255,6 +254,11 @@ Synthesizer::samples( void )
 // ---------------------------------------------------------------------------
 //	setFadeTime
 // ---------------------------------------------------------------------------
+//!	Set this Synthesizer's fade time to the specified value 
+//!	(in seconds, must be non-negative).
+//!
+//!	\param	t The new Partial fade time.
+//!	\throw	InvalidArgument if the specified fade time is negative.
 void 
 Synthesizer::setFadeTime( double partialFadeTime )  
 {
@@ -262,7 +266,7 @@ Synthesizer::setFadeTime( double partialFadeTime )
 	//	is valid:
 	if ( partialFadeTime < 0. )
 	{
-		Throw( InvalidObject, "Synthesizer Partial fade time must be non-negative." );
+		Throw( InvalidArgument, "Synthesizer Partial fade time must be non-negative." );
 	}
 
 	tfade = partialFadeTime;
