@@ -59,46 +59,73 @@ class Synthesizer
 //	-- public interface --
 public:
 //	-- construction --
+
+	//!	Construct a Synthesizer using the specified sampling rate, sample
+	//!	buffer (a standard library vector), and Partial
+	//!	fade time (in seconds). Since Partials generated by the Loris Analyzer
+	//!	generally begin and end at non-zero amplitude, zero-amplitude
+	//!	Breakpoints are inserted at either end of the Partial, at a temporal
+	//!	distance equal to the fade time, to reduce turn-on and turn-off
+	//!	artifacts. If the fade time is unspecified, the default value of one
+	//!	millisecond (0.001 seconds) is used.
+	//!
+	//!	\param	samplerate The rate (Hz) at which to synthesize samples
+	//!			(must be positive).
+	//!	\param	buffer The vector (of doubles) into which rendered samples
+	//!			should be accumulated.
+	//!	\param	fade The Partial fade time in seconds (must be non-negative).
+	//!	\throw	InvalidArgument if the specfied sample rate is non-positive.
+	//!	\throw	InvalidArgument if the specified fade time is negative.
 	Synthesizer( double srate, std::vector<double> & buffer, double fadeTime = .001 );
-	/*	Construct a Synthesizer using the specified sampling rate, sample
-		buffer (a standard library vector), and Partial
-		fade time (in seconds). Since Partials generated by the Loris Analyzer
-		generally begin and end at non-zero amplitude, zero-amplitude
-		Breakpoints are inserted at either end of the Partial, at a temporal
-		distance equal to the fade time, to reduce turn-on and turn-off
-		artifacts. If the fade time is unspecified, the default value of one
-		millisecond (0.001 seconds) is used.
-	 */
-	 
-	Synthesizer( const Synthesizer & other );
-	/*	Construct a Synthesizer that is an exact copy of another Synthesizer,
-		that is, uses the same sample buffer, sampling rate, and fade time.
-	 */
-	 
-	~Synthesizer( void );
-	/*	 Destroy this Synthesizer. (Does not destroy the sample buffer.)
-	 */
 	
-	Synthesizer & operator= ( const Synthesizer & other );
-	/*	Assignment operator: change this synthesizer to be an exact copy
-		of the specified Synthesizer, rhs, that is, using the same sample
-		buffer, sampling rate, and fade time.
-	 */
+	// 	Compiler can generate copy, assign, and destroy.
+	//	Synthesizer( const Synthesizer & other );
+	//	~Synthesizer( void );
+	//	Synthesizer & operator= ( const Synthesizer & other );
 	 
 //	-- synthesis --
+
+	//!	Synthesize a bandwidth-enhanced sinusoidal Partial. Zero-amplitude
+	//!	Breakpoints are inserted at either end of the Partial to reduce
+	//!	turn-on and turn-off artifacts, as described above. The synthesizer
+	//!	will resize the buffer as necessary to accommodate all the samples,
+	//!	including the fade out. Previous contents of the buffer are not
+	//!	overwritten. Partials with start times earlier than the Partial fade
+	//!	time will have shorter onset fades. Partials are not rendered at
+	//! frequencies above the half-sample rate. 
+	//!
+	//! \param 	p The Partial to synthesize.
+	//! \return Nothing.
+	//!	\pre	The partial must have non-negative start time.
+	//! \post	This Synthesizer's sample buffer (vector) has been 
+	//!			resized to accommodate the entire duration of the 
+	//!			Partial, p, including fade out at the end.
+	//!	\throw	InvalidPartial if the Partial has negative start time.
 	void synthesize( const Partial & p );	
-	/*	Synthesize a bandwidth-enhanced sinusoidal Partial. Zero-amplitude
-		Breakpoints are inserted at either end of the Partial to reduce
-		turn-on and turn-off artifacts, as described above. Synthesizer
-		will grow the sample vector if necessary to accomodate the rendered
-		samples.
-	 */
 	 
-	void operator() ( const Partial & p )
-		{ synthesize( p ) ; }
-	/*	Function call operator: same as synthesize( p ).
-	 */
+	//!	Function call operator: same as synthesize( p ).
+	void operator() ( const Partial & p ) { synthesize( p ) ; }
+
 	 
+	//!	Synthesize all Partials on the specified half-open (STL-style) range.
+	//!	Null Breakpoints are inserted at either end of the Partial to reduce
+	//!	turn-on and turn-off artifacts, as described above. The synthesizer
+	//!	will resize the buffer as necessary to accommodate all the samples,
+	//!	including the fade outs. Previous contents of the buffer are not
+	//!	overwritten. Partials with start times earlier than the Partial fade
+	//!	time will have shorter onset fades.  Partials are not rendered at
+	//! frequencies above the half-sample rate. 
+	//!
+	//! \param 	begin_partials The beginning of the range of Partials 
+	//!			to synthesize.
+	//! \param 	end_partials The end of the range of Partials 
+	//!			to synthesize.
+	//! \return Nothing.
+	//!	\pre	The partials must have non-negative start times.
+	//! \post	This Synthesizer's sample buffer (vector) has been 
+	//!			resized to accommodate the entire duration of all the 
+	//!			Partials including fade out at the ends.
+	//!	\throw	InvalidPartial if any Partial has negative start time.
 #if ! defined(NO_TEMPLATE_MEMBERS)
 	template<typename Iter>
 	void synthesize( Iter begin_partials, Iter end_partials );
@@ -106,13 +133,9 @@ public:
 	void synthesize( PartialList::iterator begin_partials, 
 					 PartialList::iterator end_partials, );	
 #endif
-	/*	Synthesize all Partials on the specified half-open (STL-style) range.
-		Zero-amplitude Breakpoints are inserted at either end of the Partial to 
-		reduce turn-on and turn-off artifacts, as described above. Synthesizer
-		will grow the sample vector if necessary to accomodate the rendered
-		samples.
-	 */
 	 
+	//!	Function call operator: same as 
+	//!	synthesize( begin_partials, end_partials ).
 #if ! defined(NO_TEMPLATE_MEMBERS)
 	template<typename Iter>
 	void operator() ( Iter begin_partials, Iter end_partials );
@@ -120,35 +143,35 @@ public:
 	void operator() ( PartialList::iterator begin_partials, 
 					  PartialList::iterator end_partials );
 #endif
-	/*	Function call operator: same as 
-		synthesize( begin_partials, end_partials ).
-	 */
 	
 //	-- access --
+	//!	Return this Synthesizer's Partial fade time, in seconds.
 	double fadeTime( void ) const;
-	/* 	Return this Synthesizer's Partial fade time, in seconds.
-	 */
 	 
+	//!	Return the sampling rate (in Hz) for this Synthesizer.
 	double sampleRate( void ) const;
-	/*	Return the sampling rate (in Hz) for this Synthesizer.
-	 */
 
+	//!	Return a const reference to the sample buffer used (not
+	//!	owned) by this Synthesizer.
 	const std::vector<double> samples( void ) const;
+
+	//!	Return a reference to the sample buffer used (not
+	//!	owned) by this Synthesizer.
 	std::vector<double> samples( void );
-	/*	Return a reference (or const reference) to the sample buffer used (not
-		owned) by this Synthesizer.
-	 */
 	
 //	-- mutation --
-	void setFadeTime( double partialFadeTime );
-	/*	Set this Synthesizer's fade time to the specified value 
-		(in seconds, must be non-negative).
-	 */
+
+	//!	Set this Synthesizer's fade time to the specified value 
+	//!	(in seconds, must be non-negative).
+	//!
+	//!	\param	t The new Partial fade time.
+	//!	\throw	InvalidArgument if the specified fade time is negative.
+	void setFadeTime( double t );
 	 
 //	-- implementation --
 private:
 	Oscillator osc;
-	std::vector< double > & sampleBuffer;	//	samples are computed and stored here
+	std::vector< double > * sampleBuffer;	//	samples are computed and stored here
 	double tfade;							// 	Partial fade in/out time in seconds
 	double srate;							//	sample rate in Hz
 	
@@ -158,15 +181,24 @@ private:
 // ---------------------------------------------------------------------------
 //	synthesize 
 // ---------------------------------------------------------------------------
-//	Synthesize all Partials on the specified half-open (STL-style) range
-//	with the (optionally) specified timeShift (in seconds). Zero-amplitude
-//	Breakpoints are inserted at either end of the Partial to reduce
-//	turn-on and turn-off artifacts, as described above. The client is
-//	responsible or insuring that this Synthesizer's buffer is long enough
-//	to hold all samples from the time-shifted and padded Partials.
-//	Synthesizer will not generate samples outside the buffer, but neither
-//	will any attempt be made to eliminate clicks at the buffer boundaries.
-//	If the time shift is unspecified, no time shift is used.
+//!	Synthesize all Partials on the specified half-open (STL-style) range.
+//!	Null Breakpoints are inserted at either end of the Partial to reduce
+//!	turn-on and turn-off artifacts, as described above. The synthesizer
+//!	will resize the buffer as necessary to accommodate all the samples,
+//!	including the fade outs. Previous contents of the buffer are not
+//!	overwritten. Partials with start times earlier than the Partial fade
+//!	time will have shorter onset fades.
+//!
+//! \param 	begin_partials The beginning of the range of Partials 
+//!			to synthesize.
+//! \param 	end_partials The end of the range of Partials 
+//!			to synthesize.
+//! \return Nothing.
+//!	\pre	The partials must have non-negative start times.
+//! \post	This Synthesizer's sample buffer (vector) has been 
+//!			resized to accommodate the entire duration of all the 
+//!			Partials including fade out at the ends.
+//!	\throw	InvalidPartial if any Partial has negative start time.
 //
 #if ! defined(NO_TEMPLATE_MEMBERS)
 template<typename Iter>
@@ -182,8 +214,8 @@ Synthesizer::synthesize( PartialList::iterator begin_partials,
 	typedef std::vector< double >::size_type Sz_Type;
 	Sz_Type Nsamps = 1 +  
 		Sz_Type( PartialUtils::timeSpan( begin_partials, end_partials ).second * srate );
-	if ( sampleBuffer.size() < Nsamps )
-		sampleBuffer.resize( Nsamps );
+	if ( sampleBuffer->size() < Nsamps )
+		sampleBuffer->resize( Nsamps );
 
 	while ( begin_partials != end_partials ) 
 		synthesize( *(begin_partials++) ); 
@@ -192,8 +224,8 @@ Synthesizer::synthesize( PartialList::iterator begin_partials,
 // ---------------------------------------------------------------------------
 //	operator() 
 // ---------------------------------------------------------------------------
-//	Function call operator: same as 
-//		synthesize( begin_partials, end_partials, timeShift ).
+//!	Function call operator: same as 
+//!		synthesize( begin_partials, end_partials, timeShift ).
 //
 #if ! defined(NO_TEMPLATE_MEMBERS)
 template<typename Iter>
